--- a/_config.yml
+++ b/_config.yml
@@ -25,16 +25,15 @@ ganalytics: UA-113961478-1
 # Authors
 authors:
   sal:
-    name: Sal
-    display_name: Sal
+    name: Jacques
+    display_name: Jacques
     avatar: 'assets/images/sal.png'
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net/category/jekyll-themes/
     twitter: https://twitter.com/wowthemesnet
-    description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John
+    description: "Jacques instructional guides on IAM"
+    name: Jacques
+    display_name: Jacques
     avatar: 'assets/images/john.png'
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net/category/jekyll-themes/
